[package]
name = "anyrun-rbw"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
error-stack = "0.4.1"
serde_json = "1.0.114"
crc64fast = "1.1.0"
tap = "1.0.1"
ron = "0.8.1"
